add: entities based on db
add: repositories for all entities

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 spring.application.name=backend
 
 spring.main.allow-bean-definition-overriding=true
-spring.datasource.url=jdbc:sqlserver://localhost:54854;databaseName=LMS;encrypt=false
+spring.datasource.url=jdbc:sqlserver://localhost:54854;databaseName=hrms_db;encrypt=false;createDatabaseIfNotExist=true
 spring.datasource.username=sa
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-
-security.user.name=foo
-security.user.password=bar
-security-user.role=ADMIN
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
