--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -68,7 +68,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.2.0</version>
+            <version>2.8.1</version>
         </dependency>
 
 
@@ -105,6 +105,13 @@
             <version>3.12.0</version>
         </dependency>
         <!-- apache string -->
+
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
