add: basic auth

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=backend
-
+server.port=8081
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.url=jdbc:sqlserver://localhost:54854;databaseName=hrms_db;encrypt=false;createDatabaseIfNotExist=true
 spring.datasource.username=sa
