add: complete endpoint for traveltype
partial-add: logger

add: scaler-ui

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,15 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 jwt_secret=a-string-secret-at-least-256-bits-long
+
+
+# logging
+#logging.level.com.roima.hrms.controller=INFO
+#logging.file.name=application.log
+#logging.file.path=logs/
+
+
+# scaler ui
+scalar.enabled=true
+scalar.url=http://localhost:8081/v3/api-docs
+scalar.path=/scaler
