--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -71,6 +71,12 @@
             <version>2.8.1</version>
         </dependency>
 
+        <!--    scaler ui added    -->
+        <dependency>
+            <groupId>com.scalar.maven</groupId>
+            <artifactId>scalar</artifactId>
+            <version>0.1.0</version>
+        </dependency>
 
         <!--JWT -->
         <dependency>
