add: expense-type endpoint

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,9 +19,11 @@ jwt_secret=a-string-secret-at-least-256-bits-long
 
 
 # logging
-#logging.level.com.roima.hrms.controller=INFO
-#logging.file.name=application.log
-#logging.file.path=logs/
+logging.level.root=INFO
+#logging.level.com.roima=DEBUG
+logging.file.name=app.log
+logging.file.path=logs/
+
 
 
 # scaler ui
