test: learnt and tested writting jpql queries

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.username=sa
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+
+spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
