--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.20",
     "@tanstack/react-table": "^8.21.3",
+    "@xyflow/react": "^12.10.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,6 +30,7 @@
     "react-day-picker": "^9.13.2",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.71.1",
+    "react-pdf": "^10.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0",
     "sonner": "^2.0.7",
