--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,9 +6,12 @@ spring.datasource.username=sa
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-
+# multipart files [jd,expense,doc]
 spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
 
+
+# jpa
 spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -19,6 +22,8 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+
+# jwt secret
 jwt_secret=a-string-secret-at-least-256-bits-long
 
 
