--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -39,3 +39,7 @@ logging.file.path=logs/
 scalar.enabled=true
 scalar.url=http://localhost:8081/v3/api-docs
 scalar.path=/scaler
+
+
+# frontend
+frontend.url = http://localhost:5173/
