--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -113,6 +113,13 @@
         <!-- apache string -->
 
 
+        <!--    email    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <!--    email    -->
+
         <dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
