--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -24,5 +24,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src", "tmp/TravelDocumentsPage.tsx"]
+  "include": [
+    "src",
+    "src/components/travelPlans/TravelDocuments/TravelDocumentsPage.tsx"
+  ]
 }
