--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "flat": "^6.0.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.23",
@@ -42,6 +43,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.12",
     "@eslint/js": "^9.39.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
