--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.servlet.multipart.max-file-size=10MB
 
 # jpa
 spring.jpa.properties.hibernate.hbm2ddl.create_namespaces=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
@@ -32,7 +32,6 @@ logging.level.root=INFO
 #logging.level.com.roima=DEBUG
 logging.file.name=app.log
 logging.file.path=logs/
-
 
 
 # scaler ui
